--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,30 @@
 {
-    "name": "Gartic Phone Painter",
-    "description": "Draw images on Gartic Phone",
-    "version": "0.1.0",
-    "manifest_version": 3,
-    "icons": {
-        "16": "./images/icon-16x16.png",
-        "32": "./images/icon-32x32.png",
-        "48": "./images/icon-48x48.png",
-        "128": "./images/icon-128x128.png"
-    },
-    "background": {
-        "service_worker": "./background.js"
-    },
-    "action": {
-        "default_popup": "./popup.html",
-        "default_icons": {
-            "16": "./images/icon-16x16.png",
-            "32": "./images/icon-32x32.png",
-            "48": "./images/icon-48x48.png",
-            "128": "./images/icon-128x128.png"
-        }
-    },
-    "options_page": "./options.html",
-    "permissions": [
-        "activeTab",
-        "tabs",
-        "storage",
-        "scripting",
-        "https://127.0.0.1:5000/images"
-    ],
-    "host_permissions": [
-        "https://garticphone.com/*/"
-    ]
+  "name": "Gartic Phone Painter",
+  "description": "Draw images on Gartic Phone",
+  "version": "0.1.0",
+  "manifest_version": 3,
+  "icons": {
+    "16": "./images/icon-16x16.png",
+    "32": "./images/icon-32x32.png",
+    "48": "./images/icon-48x48.png",
+    "128": "./images/icon-128x128.png"
+  },
+  "background": {
+    "service_worker": "./background.js"
+  },
+  "action": {
+    "default_popup": "./popup.html",
+    "default_icons": {
+      "16": "./images/icon-16x16.png",
+      "32": "./images/icon-32x32.png",
+      "48": "./images/icon-48x48.png",
+      "128": "./images/icon-128x128.png"
+    }
+  },
+  "options_page": "./options.html",
+  "permissions": ["activeTab", "tabs", "storage", "scripting"],
+  "host_permissions": [
+    "https://garticphone.com/*/",
+    "https://127.0.0.1:5000/images"
+  ]
 }
